syntax = "proto2";

option java_package = "test.proto";

message TestResponse1 {
  optional uint32 c = 1;
  optional bool d = 2;
}
