syntax = "proto2";

import "test/proto/test.proto";
option java_package = "test.proto";

message TestMessage2 {
  optional uint32 c = 1;
  optional bool d = 2;
  optional TestMessage testMsg = 3;
}
